--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Viewport Test</title>
   </head>
   <body>
-    <h1>With The Viewport Tag</h1>
+    <h1>Without The Viewport Tag</h1>
 
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea asperiores
